--- a/chingoal/account/templates/account/view_profile.html
+++ b/chingoal/account/templates/account/view_profile.html
@@ -237,3 +237,9 @@
 
     {% block origin-script %}
     {% endblock %}
+
+
+
+{% block script-content %}
+    <script src="{% static "js/view_profile.js"%}"></script>
+{% endblock %}
