--- a/chingoal/account/templates/account/view_profile.html
+++ b/chingoal/account/templates/account/view_profile.html
@@ -122,6 +122,7 @@
     </div>
   
     <div class="rightRoll">
+     <div class="message_box">
     	<p class=" text-center">Leave your message:</p>
 			<form method="POST" action="{% url 'post' %}">
         		<span>
@@ -134,7 +135,37 @@
             {% csrf_token %}
       		</form>
         </div>
-       
+      </div>
+     <a name="tab3" style="color:white">tab3</a>
+      <div class="set-bottom text-center">
+        <div class="row"> 
+            <div class="col-lg-3">
+                {% if cur_username == username %}
+                    <div  class="div2"> <span id="title1">My Follower</span><br/>
+                    {% for follower in followers %}
+                        <div class="list">
+                        <ul class="faceul3">
+                            <li> <img src="{{ follower.photo.url }}" alt="no image" onclick="location.href=#"><br/>
+                        <a href="#" id="username">{{follower.user.username}}</a> </li>
+                        </ul>
+                        </div>
+                        {% endfor %} </div>
+                {% endif%}
+              </div>
+          <div class="col-lg-3">
+            <div class="div2"> <span id="title2">Recommend Friend</span><br/>
+                {% for unfollower in unfollowers %}
+                <div class="list">
+                <ul class="faceul3">
+                    <li> <img src="{{ unfollower.photo.url }}" alt="no image" onclick="location.href=#"><br/>
+                <a href="#" id="username1">{{unfollower.user.username}}</a> </li>
+                </ul>
+                </div>
+                {% endfor %} 
+             </div> 
+           </div>
+        </div>
+    </div>    
     <a name="tab2" style="color:white">tab2</a>
     <div class="set-bottom">
     		 <div class="row"> 
@@ -174,37 +205,6 @@
                 </div>
              </div>
         </div>
-    
-    <a name="tab3" style="color:white">tab3</a>
-      <div class="set-bottom">
-        <div class="row"> 
-            <div class="col-lg-3">
-                {% if cur_username == username %}
-                    <div  class="div2"> <span id="title1">My Follower</span><br/>
-                    {% for follower in followers %}
-                        <div class="list">
-                        <ul class="faceul3">
-                            <li> <img src="{{ follower.photo.url }}" alt="no image" onclick="location.href=#"><br/>
-                        <a href="#" id="username">{{follower.user.username}}</a> </li>
-                        </ul>
-                        </div>
-                        {% endfor %} </div>
-                {% endif%}
-              </div>
-          <div class="col-lg-3">
-            <div class="div2"> <span id="title2">Recommend Friend</span><br/>
-                {% for unfollower in unfollowers %}
-                <div class="list">
-                <ul class="faceul3">
-                    <li> <img src="{{ unfollower.photo.url }}" alt="no image" onclick="location.href=#"><br/>
-                <a href="#" id="username1">{{unfollower.user.username}}</a> </li>
-                </ul>
-                </div>
-                {% endfor %} 
-             </div> 
-           </div>
-        </div>
-    </div>  
 <footer>
     <div class="container">
         <div class="row">
