--- a/chingoal/account/templates/account/edit_profile.html
+++ b/chingoal/account/templates/account/edit_profile.html
@@ -65,8 +65,8 @@
                         {% for error in errors %}
                             <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
                         {% endfor %}
-                        {% if msg %}
-                           <p class="bg-success err-msg"><span class="glyphicon glyphicon-ok-sign"></span>{{ msg }}</p>
+                        {% if msg == 'yes' %}
+                           <p class="bg-success err-msg"><span class="glyphicon glyphicon-ok-sign"></span>Your changes have been saved successfully ~</p>
                         {% endif %}
                     <div class="panel-heading">
                         <h3 class="panel-title">Edit You Profile</h3>
