--- a/chingoal/account/templates/account/edit_profile.html
+++ b/chingoal/account/templates/account/edit_profile.html
@@ -8,7 +8,6 @@
     {% endblock %}
     
         {% block main-content %}
-    {% load static %}
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -52,22 +51,9 @@
 <section id="portfolio" class="bg-light-gray">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-md-4 col-md-offset-3">
                 <div class="login-panel panel panel-default">
-                    {% for field in editForm.visible_fields %}
-                        {% for error in field.errors %}
-                        <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
-                        {% endfor %}
-                        {% endfor %}
-                        {% for error in editForm.non_field_errors %}
-                            <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
-                        {% endfor %}
-                        {% for error in errors %}
-                            <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
-                        {% endfor %}
-                        {% if msg == 'yes' %}
-                           <p class="bg-success err-msg"><span class="glyphicon glyphicon-ok-sign"></span>Your changes have been saved successfully ~</p>
-                        {% endif %}
+                   
                     <div class="panel-heading">
                         <h3 class="panel-title">Edit You Profile</h3>
                     </div>
@@ -89,7 +75,27 @@
                     </div>
                 </div>
             </div>
-        </div>
+             <div class="col-md-4" style="width:250px;">
+             	 {% for field in editForm.visible_fields %}
+                        {% for error in field.errors %}
+                        <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
+                        {% endfor %}
+                        {% endfor %}
+                        {% for error in editForm.non_field_errors %}
+                            <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
+                        {% endfor %}
+                        {% for error in errors %}
+                            <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
+                        {% endfor %}
+                        {% if msg == 'yes' %}
+                           <p class="bg-success err-msg"><span class="glyphicon glyphicon-ok-sign"></span>Changes have been saved ~</p>
+                           <img src="{% static "img/success.jpg"%}" alt="" style="width:200px;height:200px;">
+                        {% else %}
+                        <img src="{% static "img/fail.jpg"%}" alt="" style="width:200px;height:200px;">
+                        {% endif %}
+             
+            </div>
+         </div>
     </div>
     </section>
     {% endblock %}
