--- a/chingoal/account/templates/account/login.html
+++ b/chingoal/account/templates/account/login.html
@@ -96,7 +96,7 @@
                                         <input name="remember" type="checkbox" value="Remember Me">Remember Me
                                     </label>
                                     <label>
-                                        <a href="{% url 'resetPassword' %}">Forget Password?</a>
+                                        <a href="{% url 'reset' %}">Forget Password?</a>
                                     </label>
                                     <label >
                                         <a href="{% url 'register' %}">SignUp</a>
