--- a/chingoal/account/templates/account/reset_confirm.html
+++ b/chingoal/account/templates/account/reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends 'grumblr/authbase.html' %}
+{% extends 'account/authbase.html' %}
 {% block title %}Reset Password{% endblock %}
 
 {% block mainblock %}
