add link to discussion board

--- a/chingoal/home/templates/dashboard.html
+++ b/chingoal/home/templates/dashboard.html
@@ -39,7 +39,7 @@
                         <a class="page-scroll" href="#portfolio">Lessons</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Discussion</a>
+                        <a class="page-scroll" href="{% url 'discussion_home' %}">Discussion</a>
                     </li>
 <!--                     <li>
                         <a class="page-scroll" href="{% url 'store' %}">Store</a>
