--- a/chingoal/discussion/templates/discussion/discussion_board.html
+++ b/chingoal/discussion/templates/discussion/discussion_board.html
@@ -325,7 +325,7 @@
                             </div>
                             <div class="col-md-6">
                                 
-                                <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">New Post</button>
+                                <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" id="new_post_button">New Post</button>
                                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
