new discussion board html

--- a/chingoal/discussion/templates/discussion/discussion_board.html
+++ b/chingoal/discussion/templates/discussion/discussion_board.html
@@ -69,8 +69,8 @@
 
         <div class="row">
             <div class="col-lg-1"></div>
-            <div class="col-lg-10" id="post_table">
-                <table class="table table-hover">
+            <div class="col-lg-10">
+                <table class="table table-hover" id="post_table">
                 <thead>
                     <tr>
                     <td>#</td>
@@ -79,8 +79,7 @@
                     <td># Replies</td>
                     </tr>
                 </thead>
-                
-                <tr>
+                <!-- <tr>
                     <td>1</td>
                     <td>How to Solve This Problem?</td>
                     <td>User 1</td>
@@ -103,7 +102,7 @@
                     <td>How to Solve This Problem?</td>
                     <td>User 4</td>
                     <td>3</td>
-                </tr>
+                </tr> -->
                 </table>
             </div>
             <div class="col-lg-1"></div>            
@@ -166,8 +165,8 @@
                     <div class="form-group">
                         <textarea class="form-control" rows="5"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-default">Submit Button</button>
-                    <button type="reset" class="btn btn-default">Reset Button</button>
+                    <button type="submit" class="btn btn-primary">Post</button>
+                    <button type="reset" class="btn btn-warning">Reset</button>
                 </form>
 
             </div>
