--- a/chingoal/chingoal/template/base.html
+++ b/chingoal/chingoal/template/base.html
@@ -28,6 +28,7 @@
     <link href="{% static "css/agency.css"%}" rel="stylesheet">
     {% endblock %}
     
+    <link href="{% static "css/navbar-define.css"%}" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="{% static "font-awesome/css/font-awesome.min.css"%}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
