--- a/chingoal/discussion/templates/discussion/discussion_board.html
+++ b/chingoal/discussion/templates/discussion/discussion_board.html
@@ -163,10 +163,10 @@
             <div class="modal-body">
                 <form role="form">
                     <div class="form-group">
-                        <textarea class="form-control" rows="5"></textarea>
+                        <textarea class="form-control" rows="5" id="postText"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Post</button>
-                    <button type="reset" class="btn btn-warning">Reset</button>
+                    <button type="submit" class="btn btn-primary" id="postBtn">Post</button>
+                    <button type="reset" class="btn btn-warning" id="resetBtn">Reset</button>
                 </form>
 
             </div>
