--- a/chingoal/testpage/templates/testpage/learn.html
+++ b/chingoal/testpage/templates/testpage/learn.html
@@ -168,7 +168,7 @@
                     <div class="col-lg-2">
                     </div>
                     <div class="col-lg-8">
-                        <img src="{% static "img/head.jpg"%}" class="img-responsive img-circle">
+                        <img src="{{cur_user.photo.url}}" class="img-responsive img-circle">
                         <button type="button" class="btn btn-primary btn-lg btn-block" onclick="location.href='chingoal-test.html'">Testout</button>
                     </div>
                     <div class="col-lg-2">
